# brass-lang

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: CMakeLists.txt  allocator.h  ast.cpp  ast.h  brass.cpp  brass.h  builtin.cpp  builtin.h  bytecode.cpp  bytecode.h  compiler.cpp  compiler.h  gc.cpp  gc.h  lexer.cpp  lexer.h  main.cpp  object.cpp  object.h  parser.cpp  parser.h  utils.h  vm.cpp  vm.h
tests/: CMakeLists.txt  misc.cpp  tests.cpp
tests/programs/: ex_01.bs  recursive_sum.bs  square.bs
